bugfix: import toolbar settings correctly from tvbrowser 1.0